packages/typ/tests/fixtures/diagnostics/0988_mli_nested_path_zeroary_overapplied_07.mli.expected
File "0988_mli_nested_path_zeroary_overapplied_07.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0988_mli_nested_path_zeroary_overapplied_07 is not a valid module name.

File "0988_mli_nested_path_zeroary_overapplied_07.mli", line 7, characters 12-33:
7 | val x_eta : int Outer_eta.Inner.t
                ^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor Outer_eta.Inner.t expects 0 argument(s),
       but is here applied to 1 argument(s)
