packages/typ/tests/fixtures/diagnostics/0988_mli_nested_path_zeroary_overapplied_07.mli
module Outer_eta : sig
  module Inner : sig
    type t
  end
end

val x_eta : int Outer_eta.Inner.t
